src/parser/snapshots/monkey_language_server__parser__test__errors.snap
---
source: src/parser/test.rs
description: "\nlet x = 12;\nlet y;\n\nlet add = fn(x y) {\n    return x y;\n};\n\nreturn y\nx\n"
expression: "input_diagnostics(input, errors)"
---

let x = 12;
let y;
     ^ [Error] SyntaxError: Expected '=' not found.

let add = fn(x y) {
               ^ [Error] SyntaxError: Expected ',' not found.
    return x y;
             ^ [Error] SyntaxError: Expected ';' not found.
};

return y
x
^ [Error] SyntaxError: Expected ';' not found.
